making the view a bit less shitty

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Take me to heaven - London</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -8,29 +9,29 @@
 </head>
 <body>
   <div class="container">
-    <header class="row">
+    <header class="row text-center">
       <h1>QUICK</h1>
     </header>
-    <div id='splash'>
+    <div id='splash' class="row text-center">
       <button class="btn btn-primary" onclick="heaven.swapToNextView('location-prompt', 'splash');">
         Take me now
       </button>
     </div>
-    <div id='location-prompt' class="hidden">
+    <div id='location-prompt' class="row hidden text-center">
       <p>We need to know you're current location to find it for you</p>
       <p><small>no worries, we are not working for the man</small></p>
       <button class="btn btn-primary" onclick="heaven.getGeoLocation();">
         Use my geolocation
       </button>
-      <p id='location-permission-protip' class='hidden'><b>
+      <p id='location-permission-protip' class='row hidden'><b>
         Remember to give us permission to use your location
       </b></p>
-      </br>
+      <div class="vertical-spacing"></div>
       <button class="btn btn-primary" onclick="heaven.swapToNextView('postcode-prompt', 'location-prompt');">
         Enter My current postcode
       </button>
     </div>
-    <div id='postcode-prompt' class="hidden">
+    <div id='postcode-prompt' class="row hidden text-center">
       <form onsubmit="heaven.getLocationFromPostCode(event);" class="form-inline">
         <div class='form-group'>
           <input type='text' class="form-control" />
@@ -38,7 +39,7 @@
         <input type='submit' class="btn btn-primary" />
       </form>
     </div>
-    <div id='result' class='hidden'>
+    <div id='result' class='row hidden text-center'>
       <h1>Result</h1>
       <p>maybe some sort of loading thing here.. and then just list the API result</p>
     </div>
