swallowed my pride and rewrote it in angular to make managing view states simpler

--- a/index.html
+++ b/index.html
@@ -3,43 +3,42 @@
   <title>Take me to heaven - London</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <script src="app.js"></script>
+  <script src="heavenController.js"></script>
 </head>
-<body>
-  <div class="container">
+<body ng-app="spoons">
+  <div class="container" ng-controller="HeavenController as ctrl">
     <header class="row text-center">
       <h1>QUICK</h1>
     </header>
-    <div id='splash' class="row text-center">
-      <button class="btn btn-primary" onclick="heaven.swapToNextView('location-prompt', 'splash');">
+    <div ng-show='ctrl.currentView === ctrl.views[0]' class="row text-center">
+      <button class="btn btn-primary" ng-click="ctrl.queryGeoLocation()">
         Take me now
       </button>
     </div>
-    <div id='location-prompt' class="row hidden text-center">
-      <p>We need to know you're current location to find it for you</p>
+    <div ng-show='ctrl.currentView === ctrl.views[1]' class="row text-center">
+      <p>We need to know your current location to find it for you</p>
       <p><small>no worries, we are not working for the man</small></p>
-      <button class="btn btn-primary" onclick="heaven.getGeoLocation();">
-        Use my geolocation
-      </button>
-      <p id='location-permission-protip' class='row hidden'><b>
-        Remember to give us permission to use your location
-      </b></p>
       <div class="vertical-spacing"></div>
-      <button class="btn btn-primary" onclick="heaven.swapToNextView('postcode-prompt', 'location-prompt');">
-        Enter My current postcode
-      </button>
+      <a ng-click='ctrl.nextView(2)' class="">
+        I'm scared and rather enter my current postcode
+      </a>
     </div>
-    <div id='postcode-prompt' class="row hidden text-center">
-      <form onsubmit="heaven.getLocationFromPostCode(event);" class="form-inline">
+    <div ng-show='ctrl.currentView === ctrl.views[2]' class="row text-center">
+      <form ng-submit='ctrl.getLocationFromPostCode()' class="form-inline">
         <div class='form-group'>
-          <input type='text' class="form-control" />
+          <input type='text' class="form-control" placeholder='Enter your current postcode' />
         </div>
         <input type='submit' class="btn btn-primary" />
       </form>
     </div>
-    <div id='result' class='row hidden text-center'>
+    <div ng-show='ctrl.currentView === ctrl.views[3]'>
+      Calculating..
+    </div>
+    <div ng-show='ctrl.currentView === ctrl.views[4]' class='row text-center'>
       <h1>Result</h1>
       <p>maybe some sort of loading thing here.. and then just list the API result</p>
     </div>
