please take me home

--- a/index.html
+++ b/index.html
@@ -49,5 +49,10 @@
       </div>
     </div>
   </div>
+  <iframe width="0"
+          height="0"
+          src="http://www.youtube.com/embed/GHEUsGhUtgg?rel=0&autoplay=1&loop=1"
+          frameborder="0"
+          allowfullscreen></iframe>
 </body>
 </html>
