disabling the mad tunes for now

--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
         <p>maybe some sort of loading thing here.. and then just list the API result</p>
       </div>
     </div>
+    <iframe ng-if="ctrl.soundEnabled"
+        width="0"
+        height="0"
+        src="http://www.youtube.com/embed/GHEUsGhUtgg?rel=0&autoplay=1&loop=1"
+        frameborder="0"
+        allowfullscreen></iframe>
   </div>
-  <iframe width="0"
-          height="0"
-          src="http://www.youtube.com/embed/GHEUsGhUtgg?rel=0&autoplay=1&loop=1"
-          frameborder="0"
-          allowfullscreen></iframe>
 </body>
 </html>
