Adding the google maps service

--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
           src="http://www.youtube.com/embed/GHEUsGhUtgg?rel=0&autoplay=1&loop=1"
           frameborder="0"
           allowfullscreen></iframe>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxITWoESWAqahkIULUK0rkpLfoTTTTdw4"></script>
 </body>
 </html>
