Adding google places api

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p>maybe some sort of loading thing here.. and then just list the API result</p>
       </div>
     </div>
+    <div id="places"></div>
     <iframe ng-if="ctrl.soundEnabled"
         width="0"
         height="0"
@@ -37,6 +38,6 @@
         frameborder="0"
         allowfullscreen></iframe>
   </div>
-  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxITWoESWAqahkIULUK0rkpLfoTTTTdw4"></script>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxITWoESWAqahkIULUK0rkpLfoTTTTdw4&libraries=places"></script>
 </body>
 </html>
